test: 리뷰 반영 테스트 코드 수정